# SSNHL

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
SSNHL/: RF_feature_importance.py  distribute.py  distribution_analyse.ipynb  miNNseq.py  regression_stable_test.py  run.sh  stable_test.py  stable_test_Boosting_and_Bagging.py  test.py  test1.py  util.py
analyse/: RF_interpretation.ipynb  RF_oob.ipynb  distribution_analyse.ipynb  feature_importance_analyse.ipynb  fill_influence_analyse.ipynb  relationship_analyse.ipynb  stable_test_analyse.ipynb
output/: accuracy_all.csv  accuracy_cured.csv  accuracy_effective.csv  accuracy_markedly effective.csv
output/control/: RF_feature_importance.csv  ROC_all.npy  ROC_cured.npy  ROC_effective.npy  ROC_full.npy  ROC_important.npy  ROC_markedly effective.npy  ROC_minor.npy  accuracy_all.csv  accuracy_cured.csv  accuracy_effective.csv  accuracy_full.csv  accuracy_important.csv  accuracy_markedly effective.csv  accuracy_minor.csv  comprehensive_comparison.csv
output/distribution/: consecutive_feature_distribution.csv  discrete_feature_distribution.csv  missing_distribution.csv
output/miNNseq/: RF_feature_importance.csv  ROC_all.npy  ROC_full.npy  ROC_important.npy  ROC_minor.npy  accuracy_all.csv  accuracy_full.csv  accuracy_important.csv  accuracy_minor.csv  comprehensive_comparison.csv
output/regression_control/: ROC_all.npy  ROC_full.npy  ROC_important.npy  ROC_minor.npy  accuracy_all.csv  (+4 more)
raw_data/: all.xlsx
ssnhl/: RF_feature_importance.py  regression_stable_test.py  run.sh  stable_test.py  util.py
(+26 files in other folders)
